--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pytz==2025.2
 sqlparse==0.4.4
 typing_extensions==4.1.1
 zipp==3.6.0
-gunicorn
-python-decouple
+gunicorn==23.0.0
+python-decouple==3.8
 
 
