--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-asgiref==3.4.1
-Django==3.2.25
-djangorestframework==3.15.1
-djangorestframework-simplejwt==4.4.0
-importlib-resources==5.4.0
-Pillow==8.4.0
-psycopg2-binary==2.9.6
-pytz==2025.1
-sqlparse==0.4.4
-typing_extensions==4.1.1
-zipp==3.6.0
-gunicorn==23.0.0
+asgiref==3.8.1
+Django==5.2
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+pillow==11.2.1
+psycopg2-binary==2.9.10
+PyJWT==2.9.0
+sqlparse==0.5.3
+tzdata==2025.2
+gunicorn==20.1.0
 python-decouple==3.8
+django-cors-headers==4.7.0
